--- a/power_spy/templates/home.html
+++ b/power_spy/templates/home.html
@@ -18,6 +18,9 @@
                 <h1 class="title">
                     PowerSpy
                 </h1>
+                <h3 class="subtitle">
+                    Reboot It!
+                </h3>
             </div>
         </section>
     </body>
