--- a/power_spy/static/css/styles.css
+++ b/power_spy/static/css/styles.css
@@ -9,8 +9,8 @@
     box-sizing: border-box;
     display: block;
     position: absolute;
-    width: 64px;
-    height: 64px;
+    width: 0.15vw;
+    height: 0.15vw;
     margin: 8px;
     border: 8px solid #fff;
     border-radius: 50%;
