--- a/power_spy/templates/update.html
+++ b/power_spy/templates/update.html
@@ -15,11 +15,13 @@
     <body>
         <section class="section">
             <div class="container">
-                <div class="field">
-                    <div class="control">
-                        <button class="button is-link" id="updateButton" disabled>Update</button>
+                <div class="columns is-centered">
+                    <div class="column is-half">
+                        <h1 class="title">
+                            Updating
+                        </h1>
+                        <div class="lds-ring" id="spinner"><div></div><div></div><div></div><div></div></div>
                     </div>
-                    <div class="lds-ring is-hidden" id="spinner"><div></div><div></div><div></div><div></div></div>
                 </div>
             </div>
         </section>
