--- a/power_spy/templates/home.html
+++ b/power_spy/templates/home.html
@@ -13,6 +13,26 @@
     </head>
 
     <body>
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/">
+                    PowerSpy
+                </a>
+            </div>
+
+            <div class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item" href="/">
+                        Home
+                    </a>
+
+                    <a class="navbar-item" href="/update">
+                        Update
+                    </a>
+                </div>
+            </div>
+        </nav>
+
         <section class="section">
             <div class="container">
                 <h1 class="title">
