--- a/power_spy/templates/update.html
+++ b/power_spy/templates/update.html
@@ -17,10 +17,12 @@
             <div class="container">
                 <div class="columns is-centered">
                     <div class="column is-half">
-                        <h1 class="title">
-                            Updating
-                        </h1>
-                        <div class="lds-ring" id="spinner"><div></div><div></div><div></div><div></div></div>
+                        <div class="box">
+                            <h1 class="title has-text-centered">
+                                Updating
+                            </h1>
+                            <div class="lds-ring" id="spinner"><div></div><div></div><div></div><div></div></div>
+                        </div>
                     </div>
                 </div>
             </div>
