--- a/power_spy/templates/home.html
+++ b/power_spy/templates/home.html
@@ -14,21 +14,23 @@
 
     <body>
         <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="/">
-                    PowerSpy
-                </a>
-            </div>
-
-            <div class="navbar-menu">
-                <div class="navbar-start">
+            <div class="container">
+                <div class="navbar-brand">
                     <a class="navbar-item" href="/">
-                        Home
+                        <b>PowerSpy</b>
                     </a>
+                </div>
 
-                    <a class="navbar-item" href="/update">
-                        Update
-                    </a>
+                <div class="navbar-menu">
+                    <div class="navbar-start">
+                        <a class="navbar-item" href="/">
+                            Home
+                        </a>
+
+                        <a class="navbar-item" href="/update">
+                            Update
+                        </a>
+                    </div>
                 </div>
             </div>
         </nav>
