--- a/power_spy/templates/home.html
+++ b/power_spy/templates/home.html
@@ -43,6 +43,8 @@
                 <h3 class="subtitle">
                     Reboot It!
                 </h3>
+
+                <button class="button is-warning" id="powerButton" disabled>State Unknown</button>
             </div>
         </section>
     </body>
