--- a/power_spy/templates/update.html
+++ b/power_spy/templates/update.html
@@ -21,7 +21,9 @@
                             <h1 class="title has-text-centered">
                                 Updating
                             </h1>
-                            <div class="lds-ring" id="spinner"><div></div><div></div><div></div><div></div></div>
+                            <div class="spinner">
+                                <div class="lds-ring" id="spinner"><div></div><div></div><div></div><div></div></div>
+                            </div>
                         </div>
                     </div>
                 </div>
