--- a/power_spy/static/css/styles.css
+++ b/power_spy/static/css/styles.css
@@ -2,7 +2,13 @@ html, body {
     background-color: #bbb;
 }
 
+.spinner {
+    margin: auto;
+    width: 100%;
+}
+
 .lds-ring {
+    text-align: center;
     display: inline-block;
     position: relative;
     width: 15vw;
