Adds password protection

--- a/power_spy/templates/home.html
+++ b/power_spy/templates/home.html
@@ -44,7 +44,7 @@
                     Reboot It!
                 </h3>
 
-                <button class="button is-warning" id="powerButton" disabled>State Unknown</button>
+                <button class="button is-warning" id="powerButton" disabled>❓</button>
             </div>
         </section>
     </body>
