Login help text

--- a/power_spy/templates/login.html
+++ b/power_spy/templates/login.html
@@ -30,6 +30,7 @@
                                         <button class="button is-primary" id="submit" type="submit">Submit</button>
                                     </div>
                                 </div>
+                                <p class="help is-danger is-invisible" id="invalid">Invalid password</p>
                             </form>
                         </div>
                     </div>
