--- a/power_spy/templates/home.html
+++ b/power_spy/templates/home.html
@@ -45,7 +45,7 @@
                 </h3>
 
                 <button class="button is-warning" id="powerButton" disabled>❓</button>
-                <button class="button is-danger" id="holdButton" disabled>Hold</button>
+                <button class="button is-danger" id="holdButton">Hold</button>
             </div>
         </section>
     </body>
